[gd_scene load_steps=29 format=2]

[ext_resource path="res://player/player_state_machine.gd" type="Script" id=1]
[ext_resource path="res://player/state.gd" type="Script" id=2]
[ext_resource path="res://player/states/motion/on_ground/idle.gd" type="Script" id=3]
[ext_resource path="res://player/states/motion/dash.gd" type="Script" id=4]
[ext_resource path="res://player/states/motion/on_ground/run.gd" type="Script" id=5]
[ext_resource path="res://player/states/motion/on_wall/cling.gd" type="Script" id=6]
[ext_resource path="res://player/states/motion/on_wall/climb.gd" type="Script" id=7]
[ext_resource path="res://player/states/motion/on_wall/slide.gd" type="Script" id=8]
[ext_resource path="res://player/states/motion/in_air/jump.gd" type="Script" id=9]
[ext_resource path="res://player/states/motion/in_air/fall.gd" type="Script" id=10]
[ext_resource path="res://player/states/motion/in_air/glide.gd" type="Script" id=11]
[ext_resource path="res://player/states/dead.gd" type="Script" id=12]
[ext_resource path="res://graphics/white-radial-gradient.png" type="Texture" id=13]
[ext_resource path="res://player/glow.gd" type="Script" id=14]
[ext_resource path="res://camera.gd" type="Script" id=15]
[ext_resource path="res://graphics/glider.json" type="PackedScene" id=16]
[ext_resource path="res://PlayerRespawnTransition.gd" type="Script" id=17]
[ext_resource path="res://graphics/circle-transition.png" type="Texture" id=18]
[ext_resource path="res://graphics/cave-light.png" type="Texture" id=19]
[ext_resource path="res://graphics/riley.json" type="PackedScene" id=20]

[sub_resource type="Animation" id=1]
resource_name = "dash-glow"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 0.294118, 1 ), Color( 1, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:energy")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.4, 0.6, 0.4 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.2, 7.5 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform sampler2D mask;
uniform float cutoff: hint_range(0f, 1f);
uniform float smooth_size: hint_range(0f, 1f);

void fragment() {
	float value = texture(mask, UV).r;
	float alpha = smoothstep(cutoff + smooth_size, cutoff, value * (1f - smooth_size) + smooth_size);
	COLOR = vec4(COLOR.rgb, alpha);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/cutoff = 0.0
shader_param/smooth_size = 0.03
shader_param/mask = ExtResource( 18 )

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.14
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 1.4 ), Vector2( 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
light_mask = 0
collision_mask = 14
script = ExtResource( 1 )

[node name="States" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Dash" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Run" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Cling" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Climb" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Slide" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Jump" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="Fall" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="Glide" type="Node" parent="States"]
script = ExtResource( 11 )

[node name="Dead" type="Node" parent="States"]
script = ExtResource( 12 )

[node name="OnWallTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -7.92011 )
texture = ExtResource( 13 )
texture_scale = 0.7
energy = 0.4
range_layer_min = -1
shadow_enabled = true
shadow_gradient_length = 2.0
shadow_filter = 5
shadow_filter_smooth = 10.0
__meta__ = {
"_edit_lock_": true
}

[node name="GlowAnimationPlayer" type="AnimationPlayer" parent="Light2D"]
anims/dash-glow = SubResource( 1 )
anims/glow = SubResource( 2 )
script = ExtResource( 14 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -7.5 )
shape = SubResource( 5 )

[node name="Camera" type="Camera2D" parent="."]
editor/display_folded = true
current = true
limit_left = 0
smoothing_enabled = true
offset_v = 1.0
drag_margin_top = 0.5
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 15 )

[node name="CameraShakeTimer" type="Timer" parent="Camera"]
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 0, -7.5 )
shape = SubResource( 5 )

[node name="Glider" parent="." instance=ExtResource( 16 )]
editor/display_folded = true
visible = false
light_mask = 0

[node name="Sprite" parent="Glider" index="0"]
light_mask = 0
offset = Vector2( -3, -11 )
region_rect = Rect2( 16, 0, 16, 16 )

[node name="RespawnTransition" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 17 )

[node name="ColorRect" type="ColorRect" parent="RespawnTransition"]
light_mask = 2
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -320.0
margin_bottom = 140.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RespawnTransition"]
anims/shrink-circle = SubResource( 6 )

[node name="cave-darkness" type="Sprite" parent="."]
visible = false
z_index = 4
texture = ExtResource( 19 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 20 )]

[node name="SquishStretchPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/squish = SubResource( 3 )
anims/stretch = SubResource( 4 )
[connection signal="ready" from="." to="RespawnTransition" method="_on_Player_ready"]
[connection signal="player_dashed" from="States/Dash" to="Camera" method="shake_camera"]
[connection signal="player_dashed" from="States/Dash" to="Light2D/GlowAnimationPlayer" method="_on_player_dashed"]

[editable path="Glider"]

[editable path="AnimatedSprite"]
